@@ -31,5 +31,6 @@ Gerfried Fuchs
 Stanislas Rouvelin
 Sami Kerola
 Kristian Lyngstol
+Mike Loseke
 
 $Id$
